# finite_element_method

./: .gitignore  Cargo.toml  README.md  Readme.md
description/: stiffness_groups.ods
docs/: Element_types.md  Elements_axes_direction.md  Stiffness_groups.md
src/: fem.rs  float.rs  lib.rs  main.rs  minus_one.rs  my_float.rs  tests.rs
src/auxiliary/: aux_structs.rs  mod.rs
src/extended_matrix/: aux_functions_extended_matrix.rs  aux_traits_extended_matrix.rs  extended_matrix.rs  mod.rs
src/extended_matrix/basic_matrix/: aux_functions_basic_matrix.rs  basic_matrix.rs  mod.rs  non_symmetric_matrix.rs  symmetric_matrix.rs
src/fem/: aux_functions_fe_model.rs  bar_2n_element_functions.rs  bar_element_2n_functions.rs  convex_hull_on_plane.rs  fe_analysis_result.rs  fe_boundary_condition.rs  fe_dof_parameter_data.rs  fe_force_displacement.rs  fe_model.rs  fem.rs  functions.rs  iterative_solvers.rs  math_functions.rs  methods_for_bc_data_handle.rs  methods_for_beam_data_handle.rs  methods_for_element_analysis.rs  methods_for_global_analysis.rs  methods_for_node_data_handle.rs  methods_for_plate_data_handle.rs  methods_for_separate_stiffness_matrix.rs  methods_for_shrink_indexes.rs  methods_for_truss_data_handle.rs  mod.rs  quadrilateral_4n_element_functions.rs  separated_matrix.rs  structs.rs
src/fem/element_analysis/: fe_element_analysis_result.rs  fe_force_moment_components.rs  fe_stress_strain_components.rs  mod.rs
src/fem/finite_elements/: fe.rs  fe_node.rs  finite_element.rs  functions.rs  mod.rs
src/fem/global_analysis/: fe_stiffness.rs  (+4 more)
src/tests/: fem.rs
(+36 files in other folders)
