[package]
name = "finite_element_method"
version = "0.4.11"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "A finite element method module."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended_matrix = "0.3.18"
spooles_ffi = "0.1.1"
