[package]
name = "finite_element_method"
version = "0.9.3"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "A finite element method module."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RomanShushakov/finite_element_method"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended_matrix = "0.9.2"
colsol = "1.0.0"
