[package]
name = "finite_element_method"
version = "0.9.7"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2024"
description = "A finite element method module."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RomanShushakov/finite_element_method"

[dependencies]
extended_matrix = "0.9.6"
colsol = "1.0.0"
iterative_solvers_smpl = "0.1.4"
